--- a/index.html
+++ b/index.html
@@ -3,9 +3,55 @@
   <head>
     <meta charset="UTF-8">
     <title>TT-Counter</title>
+
+    <!-- Material Design Lite https://getmdl.io/started/index.html -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.blue_grey-orange.min.css" />
+    <script defer src="https://code.getmdl.io/1.2.1/material.min.js"></script>
+
+    <link rel="stylesheet" href="css/styles.css">
+
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+
+    <!-- https://www.npmjs.com/package/ibmiotf -->
+    <script src="js/iotf-client-bundle-min.js"></script>
+
+    <script src="js/main.js"></script>
   </head>
 
   <body>
-    TT-Counter
+      <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+          <header class="mdl-layout__header">
+              <div class="mdl-layout__header-row">
+                  <!-- Title -->
+                  <span class="mdl-layout-title">TT-Counter</span>
+                  <div class="mdl-layout-spacer"></div>
+              </div>
+          </header>
+
+          <main class="mdl-layout__content">
+              <div class="page-content">
+                  <div class="mdl-grid">
+                      <div class="mdl-cell mdl-cell--1-col"></div>
+                      <div id="namePlayer1" class="mdl-cell mdl-cell--4-col player">P1</div>
+                      <div class="mdl-cell mdl-cell--2-col"></div>
+                      <div id="namePlayer2" class="mdl-cell mdl-cell--4-col player">P2</div>
+                  </div>
+              	<div class="mdl-grid">
+                      <div class="mdl-cell mdl-cell--1-col"></div>
+                      <div class="mdl-cell mdl-cell--3-col point">
+                          0
+                      </div>
+                      <div class="mdl-cell mdl-cell--1-col mdl-cell--bottom satz">0</div>
+                      <div class="mdl-cell mdl-cell--2-col point">:</div>
+                      <div class="mdl-cell mdl-cell--1-col mdl-cell--bottom satz">0</div>
+                      <div class="mdl-cell mdl-cell--3-col point">
+                          0
+                      </div>
+
+                  </div>
+              </div>
+          </main>
+      </div>
   </body>
 </html>
