Let browser listen on changes from IOT

--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
                   </div>
               	<div class="mdl-grid">
                       <div class="mdl-cell mdl-cell--1-col"></div>
-                      <div class="mdl-cell mdl-cell--3-col point">
+                      <div id="scoreP1" class="mdl-cell mdl-cell--3-col point">
                           0
                       </div>
-                      <div class="mdl-cell mdl-cell--1-col mdl-cell--bottom satz">0</div>
+                      <div id="setP1" class="mdl-cell mdl-cell--1-col mdl-cell--bottom satz">0</div>
                       <div class="mdl-cell mdl-cell--2-col point">:</div>
-                      <div class="mdl-cell mdl-cell--1-col mdl-cell--bottom satz">0</div>
-                      <div class="mdl-cell mdl-cell--3-col point">
+                      <div id="setP2" class="mdl-cell mdl-cell--1-col mdl-cell--bottom satz">0</div>
+                      <div id="scoreP2" class="mdl-cell mdl-cell--3-col point">
                           0
                       </div>
 
